// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > applies custom className 1`] = `
<button
  class="inline-flex items-center justify-center rounded-lg font-bold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 cursor-pointer bg-brand-primary text-white hover:bg-brand-600 focus-visible:ring-brand-primary shadow-[0_4px_12px_rgba(25,182,221,0.3)] h-10 px-4 text-sm custom-class"
  data-testid="button"
>
  Button
</button>
`;

exports[`Button Sizes > applies large size classes 1`] = `
<button
  class="inline-flex items-center justify-center rounded-lg font-bold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 cursor-pointer bg-brand-primary text-white hover:bg-brand-600 focus-visible:ring-brand-primary shadow-[0_4px_12px_rgba(25,182,221,0.3)] h-16 px-6 text-base"
  data-testid="button"
>
  Large Button
</button>
`;

exports[`Button Sizes > applies medium size classes 1`] = `
<button
  class="inline-flex items-center justify-center rounded-lg font-bold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 cursor-pointer bg-brand-primary text-white hover:bg-brand-600 focus-visible:ring-brand-primary shadow-[0_4px_12px_rgba(25,182,221,0.3)] h-10 px-4 text-sm"
  data-testid="button"
>
  Medium Button
</button>
`;

exports[`Button Sizes > applies small size classes 1`] = `
<button
  class="inline-flex items-center justify-center rounded-lg font-bold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 cursor-pointer bg-brand-primary text-white hover:bg-brand-600 focus-visible:ring-brand-primary shadow-[0_4px_12px_rgba(25,182,221,0.3)] h-8 px-3 text-sm"
  data-testid="button"
>
  Small Button
</button>
`;

exports[`Button Sizes > uses default size when not specified 1`] = `
<button
  class="inline-flex items-center justify-center rounded-lg font-bold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 cursor-pointer bg-brand-primary text-white hover:bg-brand-600 focus-visible:ring-brand-primary shadow-[0_4px_12px_rgba(25,182,221,0.3)] h-10 px-4 text-sm"
  data-testid="button"
>
  Default Size Button
</button>
`;

exports[`Button Variants > applies destructive variant classes 1`] = `
<button
  class="inline-flex items-center justify-center rounded-lg font-bold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 cursor-pointer bg-error-600 text-white hover:bg-error-700 focus-visible:ring-error-500 h-10 px-4 text-sm"
  data-testid="button"
>
  Destructive Button
</button>
`;

exports[`Button Variants > applies ghost variant classes 1`] = `
<button
  class="inline-flex items-center justify-center rounded-lg font-bold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 cursor-pointer text-neutral-900 hover:bg-neutral-100 focus-visible:ring-neutral-500 h-10 px-4 text-sm"
  data-testid="button"
>
  Ghost Button
</button>
`;

exports[`Button Variants > applies outline variant classes 1`] = `
<button
  class="inline-flex items-center justify-center rounded-lg font-bold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 cursor-pointer border border-neutral-200 bg-white text-neutral-900 hover:bg-neutral-50 focus-visible:ring-neutral-500 h-10 px-4 text-sm"
  data-testid="button"
>
  Outline Button
</button>
`;

exports[`Button Variants > applies primary variant classes 1`] = `
<button
  class="inline-flex items-center justify-center rounded-lg font-bold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 cursor-pointer bg-brand-primary text-white hover:bg-brand-600 focus-visible:ring-brand-primary shadow-[0_4px_12px_rgba(25,182,221,0.3)] h-10 px-4 text-sm"
  data-testid="button"
>
  Primary Button
</button>
`;

exports[`Button Variants > applies secondary variant classes 1`] = `
<button
  class="inline-flex items-center justify-center rounded-lg font-bold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 cursor-pointer bg-neutral-100 text-neutral-900 hover:bg-neutral-200 focus-visible:ring-neutral-500 h-10 px-4 text-sm"
  data-testid="button"
>
  Secondary Button
</button>
`;

exports[`Button Variants > uses default variant when not specified 1`] = `
<button
  class="inline-flex items-center justify-center rounded-lg font-bold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 cursor-pointer bg-brand-primary text-white hover:bg-brand-600 focus-visible:ring-brand-primary shadow-[0_4px_12px_rgba(25,182,221,0.3)] h-10 px-4 text-sm"
  data-testid="button"
>
  Default Button
</button>
`;
